--- a/Client/src/assets/css/Emergency.css
+++ b/Client/src/assets/css/Emergency.css
@@ -8,12 +8,12 @@ h1{
 
 .card{
   width: 100%;
-  min-height: 460px;
+  min-height: 50vh;
   margin: auto;
   box-shadow: 0px 8px 30px -10px rgba(13, 28, 39, 0.6);
   background: #fff;
   border-radius: 12px;
-  max-width: 700px;
+  max-width: 80vw;
   position: relative;
 }
 
