--- a/Client/src/assets/css/Emergency.css
+++ b/Client/src/assets/css/Emergency.css
@@ -10,15 +10,21 @@ h1{
   width: 100%;
   min-height: 50vh;
   margin: auto;
+  color: #17a2b8;
   box-shadow: 0px 8px 30px -10px rgba(13, 28, 39, 0.6);
   background: #fff;
   border-radius: 12px;
   max-width: 80vw;
   position: relative;
+  font-size: large;
 }
 
 ul{
     margin-top: 3% !important;
     margin: 3%;
-    color: #17a2b8;
+}
+
+p{
+   margin: 5%;
+   text-align: justify;
 }
